# bootstrap-full-stack-web

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2023-06-23-175728_create_users/: up.sql
services/auth-api/: Cargo.toml
services/auth-api/src/: main.rs
services/db/: Cargo.toml
services/db/src/: config.rs  conn.rs  lib.rs
