[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
db = { path = "../db" }
serde = "1.0.163"
serde_json = "1.0.69"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }